<resources>
    <string name="app_name">Oximeter App</string>

    <string name="notifyTitle">Ubicación GPS</string>
    <string name="gpsNotifyMsg">La aplicación necesita la ubicación para poder usar el bluetooth.</string>
    <string name="setting">Ajustes</string>
    <string name="cancel">Cancelar</string>

    <string name="start_scan">Iniciar escaneo</string>
    <string name="stop_scan">Parar escaneo</string>
    <string name="expand_search_settings">Expand search settings</string>
    <string name="retrieve_search_settings">Retrieve search settings</string>
    <string name="connect_fail">Conexión fallida</string>
    <string name="active_disconnected">Desconectado</string>
    <string name="disconnected">Connection disconnect</string>
    <string name="please_open_blue">Por favor activa el bluetooth primero.</string>
    <string name="select_operation_type">Select operation type</string>
    <string name="characteristic">Characteristic</string>
    <string name="data_changed">Data changes:</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="open_notification">Open notification</string>
    <string name="close_notification">Close notification</string>
    <string name="service_list">Service list</string>
    <string name="characteristic_list">Characteristic list</string>
    <string name="console">Console</string>
    <string name="name">Device broadcast name：</string>
    <string name="mac">MAC:</string>
    <string name="service">Service</string>
    <string name="type">Service type (main service)</string>
    <string name="scan_setting">Below, you can configure the conditions that you need to scan the device, which can be empty</string>
    <string name="setting_name">Enter a broadcast name for Bluetooth devices, separated by English commas</string>
    <string name="setting_mac">Enter Bluetooth device MAC</string>
    <string name="setting_uuid">Enter Bluetooth device UUID, separated by commas in English</string>
    <string name="input_hex">Please enter the HEX format command</string>
    <string name="connect">Conectar</string>
    <string name="connected">Conectado</string>
    <string name="disconnect">Desconectado</string>
    <string name="enter">Conectar</string>
    <string name="PararGrabacion">Parar de grabar</string>
    <string name="nombre_del_paciente">Nombre del paciente</string>
    <string name="no_podr_s_volver_a_descargar_los_datos_si_vuelves_hacia_atras">No podrás volver a descargar los datos si vuelves hacia atrás.</string>
    <string name="mostrar_pacientes">Mostrar pacientes</string>
    <string name="spo2">SpO2 (%)</string>
    <string name="rr_bpm">RR / Min</string>
    <string name="pr_bpm">PR (bpm)</string>
    <string name="pi">PI (%)</string>
    <string name="oximeter_app">Oximeter App</string>
    <string name="con_menos_se_puede_hacer_m_s">Con menos se puede hacer más.</string>
    <string name="pvi">PVi (%)</string>
    <string name="no_se_han_encontrado_dispositivos">Inicie el escaneo para encontrar dispositivos.</string>
    <string name="abrir_datos_con">Abrir datos con...</string>
    <string name="introduzca_en_nombre_del_paciente">Introduzca el nombre del paciente</string>
    <string name="dispositivos_encontrados">Búsqueda de dispositivos</string>
    <string name="no_se_han_encontrado_dispositivos_main">No se han encontrado dispositivos</string>
    <string name="filtrar_pacientes">Filtrar pacientes</string>
    <string name="por_filtrar">Por:</string>
    <string name="nombre_filtrar">Nombre:</string>
    <string name="fecha_filtrar">Fecha:</string>
    <string name="fecha_hint_filtro">Fecha</string>
    <string name="nombre_paciente_hint_filtro">Nombre paciente</string>
    <string name="historial_pacientes_title">Historial pacientes</string>
    <string name="lista_pacientes">Lista pacientes</string>
    <string name="consejos">Consejos</string>
    <string name="consejos_titulo">CONSEJOS</string>
    <string name="bienvenido_a_oximeter_app">Bienvenido a Oximeter App</string>
    <string name="cargando_datos_pvi">Cargando datos de PVi...</string>
    <string name="descargar_datos">Descargar datos</string>
    <string name="consejos_title">CONSEJOS</string>
    <string name="no_hay_pacientes_guardados">No hay pacientes guardados.</string>
    <string name="area_bajo_la_curva">Área bajo curva (mm2)</string>
    <string name="cisura_dicrotica_text">Cisura dicrótica</string>
    <string name="los_datos_se_guardar_n_en_android_data_es_upv_oximetro_files">Los datos se guardarán en: Android/data/es.upv.oximetro/files</string>
    <string name="parar_grabaci_n_de_datos">Guardar datos</string>
    <string name="cargando">Cargando</string>
    <string name="mmhg">mV</string>
    <string name="mv_ms">(mV/ms)</string>
    <string name="pend_dcha">Pend. Dcha</string>
    <string name="pend_izq">Pend. Izq</string>

</resources>
