<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/Paciente"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/img_paciente"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_centerVertical="true"
            android:src="@drawable/bluetooth"
            app:srcCompat="@drawable/bluetooth" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/img_paciente"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_nombre_paciente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:textColor="@color/colorTextoBlanco"
                android:textColorHighlight="@color/colorTextoBlanco"
                android:textColorHint="@color/colorTextoBlanco"
                android:textColorLink="@color/colorTextoBlanco"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_fecha_paciente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textColor="@color/colorTextoBlanco"
                android:textColorHighlight="@color/colorTextoBlanco"
                android:textColorHint="@color/colorTextoBlanco"
                android:textColorLink="@color/colorTextoBlanco"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_idle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/txt_rssi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTexto"
                android:textColorLink="@color/colorTexto"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/wify_symbol"
                app:srcCompat="@drawable/wify_symbol" />

            <Button
                android:id="@+id/btn_connect"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@drawable/bordes_redondos_botones"
                android:text="@string/connect"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_connected"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connected"
                android:textColor="@color/colorTexto"
                android:textColorLink="@color/colorTexto"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_detail"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/enter"
                android:textSize="12sp" />

        </LinearLayout>


    </RelativeLayout>


</LinearLayout>