<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorPrimary"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dispositivos_encontrados"
        android:textColor="@color/colorTexto"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNoDispositivosEncontrados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorTextoBlanco"
        app:layout_constraintBottom_toTopOf="@+id/editTextFechaFiltro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/editTextFechaFiltro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bordes_redondos_botones"
        android:padding="4dp"
        android:text="@string/start_scan"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/img_loading"
        android:layout_width="56dp"
        android:layout_height="42dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_loading"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextFechaFiltro"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/noHayDispositivosList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_se_han_encontrado_dispositivos_main"
        android:textColor="@color/colorTexto"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvNoDispositivosEncontrados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/list_device" />

    <ListView
        android:id="@+id/list_device"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="0.5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/tvNoDispositivosEncontrados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

    </ListView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/fab_mas"
        app:backgroundTint="@color/colorCard1"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/pacientes_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/colorTexto"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/add_fab"
        app:layout_constraintEnd_toEndOf="@+id/add_fab"
        app:layout_constraintStart_toStartOf="@+id/add_fab"
        app:srcCompat="@drawable/lista"
        tools:ignore="SpeakableTextPresentCheck" />

    <!--Action name text for the add alarm button-->
    <!--Make sure that you are constraining this Text to
        the add Alarm FAB button-->
    <TextView
        android:id="@+id/pacientes_action_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="Lista pacientes"
        android:textColor="@color/colorCard1"
        app:layout_constraintBottom_toBottomOf="@+id/pacientes_fab"
        app:layout_constraintEnd_toStartOf="@+id/pacientes_fab"
        app:layout_constraintTop_toTopOf="@+id/pacientes_fab" />

    <!--Floating action button for add person-->
    <!--Make sure that you are constraining this
        button to the add Alarm FAB button-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ayuda_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/colorCard1"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/pacientes_fab"
        app:layout_constraintEnd_toEndOf="@+id/pacientes_fab"
        app:layout_constraintStart_toStartOf="@+id/pacientes_fab"
        app:srcCompat="@drawable/ayuda"
        tools:ignore="SpeakableTextPresentCheck" />

    <!--Action name text for the add person button-->
    <!--Make sure that you are constraining this Text
        to the add Person FAB button-->
    <TextView
        android:id="@+id/ayuda_action_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="Ayuda"
        android:textColor="@color/colorTexto"
        app:layout_constraintBottom_toBottomOf="@+id/ayuda_fab"
        app:layout_constraintEnd_toStartOf="@+id/ayuda_fab"
        app:layout_constraintTop_toTopOf="@+id/ayuda_fab" />

    <View
        android:id="@+id/divider3"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorTexto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


</androidx.constraintlayout.widget.ConstraintLayout>

